[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.508876, 1 )
colors = PoolColorArray( 0.112426, 0.112426, 0.112426, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]

gradient = SubResource( 1 )
width = 4096

[node name="Game" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="."]

texture = SubResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 4096, 4096 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="Dominoes" type="Node2D" parent="."]

_sections_unfolded = [ "Transform" ]

[node name="Player" parent="." instance=ExtResource( 2 )]

position = Vector2( 2046.43, 2048.99 )

[node name="Center" type="Position2D" parent="."]

position = Vector2( 2048, 2048 )
_sections_unfolded = [ "Transform" ]

[node name="Debug" type="Node" parent="."]

[node name="LineBottom" type="Line2D" parent="Debug"]

points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )
texture_mode = 579826912
sharp_limit = 2.0
round_precision = 8

[node name="LineBottomLeft" type="Line2D" parent="Debug"]

points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )
texture_mode = 579826912
sharp_limit = 2.0
round_precision = 8

[node name="LineBottomRight" type="Line2D" parent="Debug"]

points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )
texture_mode = 579826912
sharp_limit = 2.0
round_precision = 8


